src/main/java/com/example/timelist/error/GroupDuplicateException.java
package com.example.timelist.error;

public class GroupDuplicateException extends RuntimeException{

}
